examples/test/testpolicy2924.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2924
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key11: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value3
          key21: value31
      podSelector:
        matchLabels:
          key7: value29
          key17: value49
